--- a/consulting.html
+++ b/consulting.html
@@ -482,7 +482,10 @@ and isolated functionality.</p>
 performance</p>
 </li>
 <li>
-<p>Code review, refactoring and optimization of existing Clojure code</p>
+<p>Refactoring and optimization of existing Clojure code</p>
+</li>
+<li>
+<p>Manual code audit, finding violations of idioms and best practices, potential sources of bugs or performance bottlenecks</p>
 </li>
 <li>
 <p>Profiling and performance improvements, tracking down and fixing tough bugs</p>
@@ -497,7 +500,7 @@ performance</p>
 crafted for the specific needs of your team.
 I will help your team to keep up with recent and upcoming language additions.
 Explaining Clojure&#8217;s internals, best practices and rationale behind idioms and
-design choices. Guidance and aiding in the process of evaluation and
+design choices. Guidance and aid in the process of evaluation and
 introduction of new language features such as reducers and upcoming transducers.</p>
 </div>
 <div class="paragraph">
@@ -507,7 +510,7 @@ introduction of new language features such as reducers and upcoming transducers.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-04-01 22:23:34 CEST
+Last updated 2015-04-28 14:45:24 CEST
 </div>
 </div>
 </body>
