--- a/index.html
+++ b/index.html
@@ -467,6 +467,9 @@ services primarily for the EU region, and remotely.</p>
 <div class="ulist">
 <ul>
 <li>
+<p><a href="http://blog.wagjo.com/markov.html">Markov Text Generator in Dunaj</a></p>
+</li>
+<li>
 <p><a href="http://blog.wagjo.com/set.html">Universal and Complement Sets in Dunaj</a></p>
 </li>
 </ul>
@@ -605,7 +608,7 @@ services primarily for the EU region, and remotely.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-04-01 22:19:10 CEST
+Last updated 2015-04-29 15:47:16 CEST
 </div>
 </div>
 </body>
