--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p>Christian, Researcher, Software engineer</p>
+<p>Business Consultant, Experienced Software Engineer</p>
 </div>
 <div class="openblock float-group">
 <div class="content">
@@ -428,51 +428,127 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="paragraph">
-<p>Researcher and software engineer, skilled in data mining, artificial intelligence and full stack web development. Implemented and delivered software back-end and middleware services for several multinational projects.</p>
+<p>Identifies and solves business problems with software and
+technical solutions.
+<strong>Addresses business needs with the application of techniques from the
+field of data mining, business informatics and machine learning.</strong></p>
 </div>
 <div class="paragraph">
-<p>Experienced also in low-level programming and communication with industrial electronic devices. Designed and developed software solutions for the medical and electrochemical industry.</p>
+<p>Enables companies to
+<a href="#_consulting_services">generate and increase revenue</a>
+with their customer facing and business critical software.
+Helps to reduce costs through the improvement of companies'
+back office and line of business software.</p>
 </div>
 <div class="paragraph">
-<p>Researcher in the field of artificial Intelligence, data mining and business informatics. Polyglot programmer with preference to functional programming. Active in open source community, a Clojure registered contributor.</p>
+<p>More than 10 years of <a href="#_experience">professional experience</a> with
+software development. <a href="#_selected_academic_publications">Researcher</a>
+in the field of Artificial Intelligence. Polyglot programmer with a
+preference to functional programming. Active in the
+<a href="#_open_source_projects">open source</a> community,
+a Clojure registered contributor.</p>
 </div>
 </div>
 </div>
 <div class="paragraph">
-<p><span class="icon"><i class="fa fa-pencil"></i></span> <a href="http://blog.wagjo.com">Blog</a> &nbsp; <span class="icon"><i class="fa fa-github"></i></span> <a href="http://github.com/wagjo">Github</a> &nbsp; <span class="icon"><i class="fa fa-twitter"></i></span> <a href="https://twitter.com/wagjo">@wagjo</a> &nbsp; <span class="icon"><i class="fa fa-envelope-o"></i></span> <a href="mailto:wagjo@wagjo.com">wagjo@wagjo.com</a></p>
+<p><span class="icon"><i class="fa fa-pencil"></i></span> <a href="http://blog.wagjo.com">Blog</a> &nbsp; <span class="icon"><i class="fa fa-github"></i></span> <a href="http://github.com/wagjo">Github</a> &nbsp; <span class="icon"><i class="fa fa-twitter"></i></span> <a href="https://twitter.com/wagjo">@wagjo</a> &nbsp; <span class="icon"><i class="fa fa-linkedin"></i></span> <a href="https://sk.linkedin.com/in/jozefwagner">jozefwagner</a> &nbsp; <span class="icon"><i class="fa fa-envelope-o"></i></span> <a href="mailto:wagjo@wagjo.com">wagjo@wagjo.com</a></p>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_consulting_services">Consulting services</h2>
+<h2 id="_experience">Experience</h2>
 <div class="sectionbody">
-<div class="paragraph">
-<p>I&#8217;m available for <a href="consulting.html">Clojure consulting</a> and
-remote contract work. I will help your new or existing Clojure
-projects to deliver, scale and adapt to your customers' ever changing
-needs. <a href="consulting.html">read more</a>.</p>
+<div class="imageblock thumb" style="float: right">
+<div class="content">
+<img src="us.png" alt="UrbanSensing" width="200">
 </div>
-<div class="paragraph">
-<p>Located in Central Europe, I provide my
-services primarily for the EU region, and remotely.</p>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_blog">Blog</h2>
-<div class="sectionbody">
-<div class="paragraph">
-<p>Latest posts from my low-frequency Clojure related blog:</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="http://blog.wagjo.com/markov.html">Markov Text Generator in Dunaj</a></p>
+<p>Implemented and deployed backend services that collect and process
+large amount of streaming geolocalized content, providing input for a
+data analytics platform for urban design, city planning and urban
+management market.</p>
 </li>
 <li>
-<p><a href="http://blog.wagjo.com/set.html">Universal and Complement Sets in Dunaj</a></p>
+<p>Contributed to the middleware services for innovative data-driven
+analytics plaform for a multinational information design agency,
+which enabled company to provide a new group of services and generate
+ additional revenue.</p>
+</li>
+<li>
+<p>Designed and implemented software solution that allowed company to
+introduce new product for the medical and chemical laboratories.</p>
 </li>
 </ul>
+</div>
+<div class="imageblock thumb" style="float: right">
+<div class="content">
+<img src="istran.jpg" alt="Istran" width="200">
+</div>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Upgraded existing software and implemented new features that enabled
+company operating in electrochemical industry to enter Asian market,
+gain competitive advantage and generate further revenue.</p>
+</li>
+<li>
+<p>Created a software solution from the ground up that communicates
+with and controls a monitoring system for waste waters and
+technological liquids, operating at multinational hardware
+manufacturers throughout western and southern Europe.</p>
+</li>
+<li>
+<p>Responsible for the provisioning, operation and administration of
+dedicated servers and a private cloud. Introduced state of the art
+approaches and solutions for the technology operations.</p>
+</li>
+</ul>
+</div>
+<div class="openblock float-group">
+<div class="content">
+<div class="imageblock thumb" style="float: right">
+<div class="content">
+<img src="kplab.png" alt="KPLab" width="200">
+</div>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Participated, as a member of multinational and multidisciplinary
+team, in the process of application of semantic technologies
+to the education process, designing and implementing ontologies and
+related backend services that provide novel ways of data management
+and knowledge analysis.</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>More details will be provided <a href="mailto:wagjo@wagjo.com">upon request</a>.</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_consulting_services">Consulting Services</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>I&#8217;m available for consulting and remote contract work.
+Feel free to contact me at <a href="mailto:wagjo@wagjo.com">wagjo@wagjo.com</a>.
+Located in Central Europe, I provide my services primarily for the EU region, and remotely.
+See more <a href="consulting.html">technology heavy details</a> about my
+consulting services and technical proficiencies.</p>
+</div>
+<div class="paragraph">
+<p>I&#8217;m particularly interested in projects that involve the usage of a
+Clojure programming language. Please <a href="consulting.html">read more
+about my services</a> that will help your new or existing Clojure
+projects to deliver, scale and adapt to your customers' ever changing
+needs.</p>
 </div>
 </div>
 </div>
@@ -495,64 +571,21 @@ services primarily for the EU region, and remotely.</p>
 </li>
 </ul>
 </div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_experience">Experience</h2>
-<div class="sectionbody">
 <div class="sect2">
-<h3 id="_systems_architect_software_engineer_istran_s_r_o">Systems architect, Software engineer @ Istran s.r.o.</h3>
-<div class="openblock float-group">
-<div class="content">
-<div class="imageblock thumb" style="float: left">
-<div class="content">
-<img src="istran.jpg" alt="Istran" width="200">
-</div>
-</div>
+<h3 id="_blog">Blog</h3>
 <div class="paragraph">
-<p>Responsible for the architecture, design and development of measuring and on-line monitoring software for laboratory (determination of trace and high concentrations of metals, semi-metals and numerous non-metals in various samples) and process analyzers (unattended monitoring system for a continuous measurement of concentrations of heavy metals and some non-metals in waters, waste waters and technological liquids).</p>
-</div>
-</div>
-</div>
-</div>
-<div class="sect2">
-<h3 id="_software_engineer_researcher">Software Engineer, Researcher</h3>
-<div class="openblock float-group">
-<div class="content">
-<div class="imageblock thumb" style="float: right">
-<div class="content">
-<img src="us.png" alt="UrbanSensing" width="200">
-</div>
+<p>Latest posts from my low-frequency software development and Clojure
+related blog:</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>✳UrbanSensing, a FP7 IST EU Project. Responsible for design and implementation of data connectors and annotation middleware service.</p>
+<p><a href="http://blog.wagjo.com/markov.html">Markov Text Generator in Dunaj</a></p>
 </li>
 <li>
-<p>UVP TECHNIKOM, a project funded under Operational Programme Education. Research in the field of process mining with focus on big data. Responsible for architecture and design of SaaS solutions for process mining and business intelligence.</p>
-</li>
-<li>
-<p>Developer at SPES, a CENTRAL EUROPE programme project. Responsible for platform testing, communication with medical devices and software for managing manual measurements.</p>
+<p><a href="http://blog.wagjo.com/set.html">Universal and Complement Sets in Dunaj</a></p>
 </li>
 </ul>
-</div>
-<div class="imageblock thumb" style="float: right">
-<div class="content">
-<img src="kplab.png" alt="KPLab" width="200">
-</div>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>IT4KT - Information Technologies for Knowledge Transfer, a national project. Responsible for research, design and implementation of semantic middleware, project dictionary and ontology. Teaching fellow for software development and business informatics courses.</p>
-</li>
-<li>
-<p>Researcher at Centre for Information Technologies, working on KP-Lab, a FP6 IST EU Project. Responsible for design and implementation of middleware web services.</p>
-</li>
-</ul>
-</div>
-</div>
 </div>
 </div>
 </div>
@@ -585,7 +618,7 @@ services primarily for the EU region, and remotely.</p>
 </ul>
 </div>
 <div class="sect2">
-<h3 id="_selected_publications">Selected Publications</h3>
+<h3 id="_selected_academic_publications">Selected Academic Publications</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -608,7 +641,7 @@ services primarily for the EU region, and remotely.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-04-29 15:47:16 CEST
+Last updated 2015-05-05 13:07:55 CEST
 </div>
 </div>
 </body>
