--- a/index.html
+++ b/index.html
@@ -428,25 +428,24 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="paragraph">
-<p>Identifies and solves business problems with software and
-technical solutions.
-<strong>Addresses business needs with the application of techniques from the
-field of data mining, business informatics and machine learning.</strong></p>
+<p>I solve business problems and create additional value for your
+company. My expertise is in helping your customer facing
+software to <a href="#_consulting_services">generate and increase revenue</a>.
+Moreover, I will help you to reduce costs through the improvement of
+your back office and line of business software.</p>
 </div>
 <div class="paragraph">
-<p>Enables companies to
-<a href="#_consulting_services">generate and increase revenue</a>
-with their customer facing and business critical software.
-Helps to reduce costs through the improvement of companies'
-back office and line of business software.</p>
+<p><strong>I specialize in addressing your business needs with the application
+of techniques from the field of data mining, business informatics and
+machine learning.</strong></p>
 </div>
 <div class="paragraph">
-<p>More than 10 years of <a href="#_experience">professional experience</a> with
-software development. <a href="#_selected_academic_publications">Researcher</a>
-in the field of Artificial Intelligence. Polyglot programmer with a
-preference to functional programming. Active in the
-<a href="#_open_source_projects">open source</a> community,
-a Clojure registered contributor.</p>
+<p>I have more than 10 years of <a href="#_experience">professional experience</a>
+with software development. My focus is on delivering simple and clean
+solution to the problem at hand, while keeping the result practical
+and efficient. I&#8217;m a polyglot programmer with a preference to
+functional programming, and I&#8217;m also active in the
+<a href="#_open_source_projects">open source</a> community.</p>
 </div>
 </div>
 </div>
@@ -537,24 +536,58 @@ and knowledge analysis.</p>
 <h2 id="_consulting_services">Consulting Services</h2>
 <div class="sectionbody">
 <div class="paragraph">
+<p>I will bring additional business value to your company by:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Designing, development and deployment of software solutions that
+solve your business problems and brings additional revenue.</p>
+</li>
+<li>
+<p>Processing and analyzing your company&#8217;s available data and logs,
+in order to discover actionable knowledge that will enable you
+to make highly informed decisions.</p>
+</li>
+<li>
+<p>Helping you to automate various line of business processes including
+data analysis one, in order to reduce costs and provide real time
+and up to date evaluations and insights.</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
 <p>I&#8217;m available for consulting and remote contract work.
 Feel free to contact me at <a href="mailto:wagjo@wagjo.com">wagjo@wagjo.com</a>.
 Located in Central Europe, I provide my services primarily for the EU region, and remotely.
 See more <a href="consulting.html">technology heavy details</a> about my
 consulting services and technical proficiencies.</p>
 </div>
-<div class="paragraph">
-<p>I&#8217;m particularly interested in projects that involve the usage of a
-Clojure programming language. Please <a href="consulting.html">read more
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+I&#8217;m particularly interested in projects that involve the usage
+of a Clojure programming language. Please <a href="consulting.html">read more
 about my services</a> that will help your new or existing Clojure
 projects to deliver, scale and adapt to your customers' ever changing
-needs.</p>
+needs.
+</td>
+</tr>
+</table>
 </div>
 </div>
 </div>
 <div class="sect1">
 <h2 id="_open_source_projects">Open Source Projects</h2>
 <div class="sectionbody">
+<div class="paragraph">
+<p>I&#8217;m <a href="https://youtu.be/NvF-GZI20L4?t=1715">one of the few</a>
+Clojure 1.7 contributors.</p>
+</div>
 <div class="ulist">
 <ul>
 <li>
@@ -641,7 +674,7 @@ related blog:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-05-05 13:07:55 CEST
+Last updated 2015-05-05 22:10:07 CEST
 </div>
 </div>
 </body>
