--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ management market.</p>
 </li>
 <li>
 <p>Contributed to the middleware services for innovative data-driven
-analytics plaform for a multinational information design agency,
+analytics platform for a multinational information design agency,
 which enabled company to provide a new group of services and generate
  additional revenue.</p>
 </li>
@@ -674,7 +674,7 @@ related blog:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-05-05 22:10:07 CEST
+Last updated 2015-05-05 22:19:32 CEST
 </div>
 </div>
 </body>
