--- a/consulting.html
+++ b/consulting.html
@@ -418,9 +418,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p>Hi, I&#8217;m <a href="http://www.wagjo.com">Jozef Wagner</a>, an independent contractor
-and a software developer. This page focuses on technical aspects of my
-services and is quite technology heavy.
+<p>Hi, I&#8217;m <a href="http://www.wagjo.com">Jozef Wagner</a>, an independent contractor,
+business consultant and a software developer. This page focuses on
+technical aspects of my services and is quite technology heavy.
 Please see <a href="index.html">my homepage</a> for more general and business
 related information about my consulting services.</p>
 </div>
@@ -439,10 +439,24 @@ hand, while keeping the result practical and efficient.</p>
 <h2 id="_technical_proficiency">Technical proficiency</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>I&#8217;ve started programming as a kid and went through BASIC, Pascal, and
-writing programs for microcontrollers in an assembly language.
-I have more than 10 years of professional experience with languages
-such as Java, C#, C++ and C.</p>
+<p>I&#8217;ve started programming as a kid, hacking BASIC on ZX Spectrum,
+Pascal under DOS, and have written programs for microcontrollers and
+PLCs in assembly languages. I&#8217;ve started my professional carreer
+more than 10 years ago and I have a strong professional experience
+with Clojure, Java, C#, C++ and C.</p>
+</div>
+<div class="paragraph">
+<p>I&#8217;ve implemented and delivered software for several multinational EU
+funded projects. I was involved in backend and middleware services
+that handle large amount of data, perform sentiments analysis, data
+aggregation, event stream processing, process and pattern discovery,
+and other data mining tasks.</p>
+</div>
+<div class="paragraph">
+<p>I&#8217;ve worked with multiple kind of databases such as
+traditional SQL ones, graph databases like Neo4j, custom semantically
+oriented databases that used SPARQL, infamous NoSQL databases like
+MongoDB and with search oriented data engines such as Elasticsearch.</p>
 </div>
 <div class="paragraph">
 <p>I have a PhD. in Artificial Intelligence and I&#8217;ve hacked on a couple
@@ -451,28 +465,22 @@ from neural networks with backprop, perceptrons, expert systems,
 to scheduling and logistic algorithms.</p>
 </div>
 <div class="paragraph">
-<p>I&#8217;ve implemented and delivered software backend and middleware
-services for several multinational EU funded projects.
-I&#8217;m also experienced in a low-level programming and communication
+<p>I&#8217;m also experienced in a low-level programming and communication
 with industrial electronic devices. I&#8217;ve designed and developed
-software solutions for the medical and electrochemical industry.</p>
-</div>
-<div class="paragraph">
-<p>I&#8217;ve worked with multiple kind of databases like
-traditional SQL ones, graph databases like Neo4j, custom semantically
-oriented databases that used SPARQL, infamous NoSQL databases like
-MongoDB and also with search oriented data engines like Elasticsearch.</p>
+software solutions for the medical and electrochemical industry,
+directly communicating with respective stakeholders and solving their
+business problems.</p>
 </div>
 <div class="paragraph">
 <p>I&#8217;m skilled in full stack web development and related technologies.
-Besides contemporary hip web languages, I&#8217;ve also went
-through a dark age of WS-*, SOAP, XSLT and other XML related
-technologies. I also did a couple of DevOps related stuff on
-multiple occasions.</p>
+Besides contemporary hip web languages and libraries, I&#8217;m not afraid
+to code in modern Javascript. I&#8217;ve also went through a dark age of
+WS-*, JSP, SOAP, XSLT and other XML related technologies. I also did a
+couple of DevOps related stuff on multiple occasions.</p>
 </div>
 <div class="paragraph">
-<p>I&#8217;m a very big fan of a Clojure language and I&#8217;m an active contributor
-to the language and its surrounding ecosystem.
+<p>I&#8217;m a big fan of a Clojure and ClojureScript languages and I&#8217;m an
+active contributor to the language and its surrounding ecosystem.
 I&#8217;m active in the
 <a href="index.html#_open_source_projects">Open Source community</a> and I&#8217;m
 running a low frequency <a href="http://blog.wagjo.com">Clojure oriented blog</a>.</p>
@@ -561,7 +569,7 @@ introduction of new language features such as reducers and upcoming transducers.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-05-05 22:16:37 CEST
+Last updated 2015-05-06 11:19:36 CEST
 </div>
 </div>
 </body>
