--- a/index.html
+++ b/index.html
@@ -501,8 +501,8 @@ technological liquids, operating at multinational hardware
 manufacturers throughout western and southern Europe.</p>
 </li>
 <li>
-<p>Responsible for the provisioning, operation and administration of
-dedicated servers and a private cloud. Introduced state of the art
+<p>Performed provisioning and administration of dedicated servers
+and a private cloud. Introduced state of the art
 approaches and solutions for the technology operations.</p>
 </li>
 </ul>
@@ -674,7 +674,7 @@ related blog:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-05-05 22:19:32 CEST
+Last updated 2015-05-06 10:41:24 CEST
 </div>
 </div>
 </body>
