--- a/consulting.html
+++ b/consulting.html
@@ -421,7 +421,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Hi, I&#8217;m <a href="http://www.wagjo.com">Jozef Wagner</a>, an independent contractor,
 business consultant and a software developer. This page focuses on
 technical aspects of my services and is quite technology heavy.
-Please see <a href="index.html">my homepage</a> for more general and business
+Please see <a href="http://www.wagjo.com/">my homepage</a> for more general and business
 related information about my consulting services.</p>
 </div>
 <div class="paragraph">
@@ -482,7 +482,7 @@ couple of DevOps related stuff on multiple occasions.</p>
 <p>I&#8217;m a big fan of a Clojure and ClojureScript languages and I&#8217;m an
 active contributor to the language and its surrounding ecosystem.
 I&#8217;m active in the
-<a href="index.html#_open_source_projects">Open Source community</a> and I&#8217;m
+<a href="http://www.wagjo.com/#_open_source_projects">Open Source community</a> and I&#8217;m
 running a low frequency <a href="http://blog.wagjo.com">Clojure oriented blog</a>.</p>
 </div>
 </div>
@@ -561,7 +561,7 @@ design choices. Guidance and aid in the process of evaluation and
 introduction of new language features such as reducers and upcoming transducers.</p>
 </div>
 <div class="paragraph">
-<p><a href="index.html">Back to the homepage</a></p>
+<p><a href="http://www.wagjo.com">Back to the homepage</a></p>
 </div>
 </div>
 </div>
@@ -569,7 +569,7 @@ introduction of new language features such as reducers and upcoming transducers.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-05-06 11:19:36 CEST
+Last updated 2015-05-06 11:22:26 CEST
 </div>
 </div>
 </body>
