--- a/index.html
+++ b/index.html
@@ -428,8 +428,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="paragraph">
-<p>I solve business problems and create additional value for your
-company. My expertise is in helping your customer facing
+<p>I will solve business problems and create additional value for your
+company. My name is Jozef Wagner and my expertise as a business consultant is in helping your customer facing
 software to <a href="#_consulting_services">generate and increase revenue</a>.
 Moreover, I will help you to reduce costs through the improvement of
 your back office and line of business software.</p>
