--- a/consulting.html
+++ b/consulting.html
@@ -428,8 +428,8 @@ related information about my consulting services.</p>
 <p>Located in Central Europe, I provide consulting and contracting
 services primarily for the EU region, and remotely.
 You can contact me at <a href="mailto:wagjo@wagjo.com">wagjo@wagjo.com</a>.
-I specialize in the fields of data mining, artificial intelligence,
-business informatics and low level programming.
+I specialize in the fields of data mining, business intelligence,
+machine learning and low level programming.
 My focus is on delivering simple and clean solution to the problem at
 hand, while keeping the result practical and efficient.</p>
 </div>
@@ -449,8 +449,8 @@ with Clojure, Java, C#, C++ and C.</p>
 <p>I&#8217;ve implemented and delivered software for several multinational EU
 funded projects. I was involved in backend and middleware services
 that handle large amount of data, perform sentiments analysis, data
-aggregation, event stream processing, process and pattern discovery,
-and other data mining tasks.</p>
+aggregation, event stream processing, pattern discovery,
+and data mining tasks.</p>
 </div>
 <div class="paragraph">
 <p>I&#8217;ve worked with multiple kind of databases such as
@@ -475,11 +475,12 @@ business problems.</p>
 <p>I&#8217;m skilled in full stack web development and related technologies.
 Besides contemporary hip web languages and libraries, I&#8217;m not afraid
 to code in modern Javascript. I&#8217;ve also went through a dark age of
-WS-*, JSP, SOAP, XSLT and other XML related technologies. I also did a
+JSP, SOAP, XSLT and other XML related technologies. I also did a
 couple of DevOps related stuff on multiple occasions.</p>
 </div>
 <div class="paragraph">
-<p>I&#8217;m a big fan of a Clojure and ClojureScript languages and I&#8217;m an
+<p>I&#8217;m a polyglot programmer with a preference to
+functional programming. I&#8217;m a big fan of a Clojure and ClojureScript languages and I&#8217;m an
 active contributor to the language and its surrounding ecosystem.
 I&#8217;m active in the
 <a href="http://www.wagjo.com/#_open_source_projects">Open Source community</a> and I&#8217;m
@@ -569,7 +570,7 @@ introduction of new language features such as reducers and upcoming transducers.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-05-06 11:22:26 CEST
+Last updated 2015-05-11 13:46:57 CEST
 </div>
 </div>
 </body>
