--- a/index.html
+++ b/index.html
@@ -427,30 +427,30 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <img src="wagjo.jpg" alt="Jozef" width="250">
 </div>
 </div>
-<div class="paragraph">
-<p>I solve business problems and create additional value for your
-company. My expertise is in helping your customer facing
-software to <a href="#_consulting_services">generate and increase revenue</a>.
-Moreover, I will help you to reduce costs through the improvement of
-your back office and line of business software.</p>
+<div class="paragraph text-justify">
+<p>I solve business problems and create additional value for my clients.
+My name is Jozef Wagner and my expertise as a
+<a href="#_consulting_services">business consultant</a> lies in <strong>creating software
+that is tailored to meet individual business needs</strong>.
+With more than 10 years of <a href="#_experience">professional experience</a>,
+I deliver solutions that generate revenue, have low total cost of
+ownership, and are flexible when adopting to new business strategies
+and initiatives.</p>
+</div>
+<div class="paragraph text-justify">
+<p>I specialize in addressing business needs with the application
+of techniques from the field of data mining, business intelligence and
+machine learning. I will help you to reduce risks and maintain trust
+in your products, processes, and business critical systems.
+I will also aid you in making better and more informed decisions.</p>
+</div>
+<div class="paragraph text-center">
+<p>Software Development &nbsp; &#x2022; &nbsp; Business Intelligence &nbsp; &#x2022; &nbsp; <a href="#_open_source_projects">Clojure Specialist</a></p>
+</div>
+</div>
 </div>
 <div class="paragraph">
-<p><strong>I specialize in addressing your business needs with the application
-of techniques from the field of data mining, business informatics and
-machine learning.</strong></p>
-</div>
-<div class="paragraph">
-<p>I have more than 10 years of <a href="#_experience">professional experience</a>
-with software development. My focus is on delivering simple and clean
-solution to the problem at hand, while keeping the result practical
-and efficient. I&#8217;m a polyglot programmer with a preference to
-functional programming, and I&#8217;m also active in the
-<a href="#_open_source_projects">open source</a> community.</p>
-</div>
-</div>
-</div>
-<div class="paragraph">
-<p><span class="icon"><i class="fa fa-pencil"></i></span> <a href="http://blog.wagjo.com">Blog</a> &nbsp; <span class="icon"><i class="fa fa-github"></i></span> <a href="http://github.com/wagjo">Github</a> &nbsp; <span class="icon"><i class="fa fa-twitter"></i></span> <a href="https://twitter.com/wagjo">@wagjo</a> &nbsp; <span class="icon"><i class="fa fa-linkedin"></i></span> <a href="https://sk.linkedin.com/in/jozefwagner">jozefwagner</a> &nbsp; <span class="icon"><i class="fa fa-envelope-o"></i></span> <a href="mailto:wagjo@wagjo.com">wagjo@wagjo.com</a></p>
+<p><span class="icon"><i class="fa fa-pencil"></i></span> <a href="http://blog.wagjo.com">Blog</a> &nbsp; <span class="icon"><i class="fa fa-github"></i></span> <a href="http://github.com/wagjo">Github</a> &nbsp; <span class="icon"><i class="fa fa-twitter"></i></span> <a href="https://twitter.com/wagjo">@wagjo</a> &nbsp; <span class="icon"><i class="fa fa-linkedin"></i></span> <a href="https://sk.linkedin.com/in/jozefwagner">jozefwagner</a> &nbsp; <span class="icon"><i class="fa fa-phone"></i></span> +421 949 213 889 &nbsp; <span class="icon"><i class="fa fa-envelope-o"></i></span> <a href="mailto:wagjo@wagjo.com">wagjo@wagjo.com</a></p>
 </div>
 </div>
 </div>
@@ -674,7 +674,7 @@ related blog:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-05-06 10:41:24 CEST
+Last updated 2015-05-11 13:38:42 CEST
 </div>
 </div>
 </body>
