--- a/index.html
+++ b/index.html
@@ -444,8 +444,8 @@ machine learning. I will help you to reduce risks and maintain trust
 in your products, processes, and business critical systems.
 I will also aid you in making better and more informed decisions.</p>
 </div>
-<div class="paragraph text-center">
-<p>Software Development &nbsp; &#x2022; &nbsp; Business Intelligence &nbsp; &#x2022; &nbsp; <a href="#_open_source_projects">Clojure Specialist</a></p>
+<div class="paragraph dtext-center">
+<p><strong>Software Development&nbsp; &#x2022; &nbsp;Business Intelligence&nbsp; &#x2022; &nbsp;<a href="#_open_source_projects">Clojure Specialist</a></strong></p>
 </div>
 </div>
 </div>
@@ -674,7 +674,7 @@ related blog:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-05-11 13:38:42 CEST
+Last updated 2015-05-11 13:54:05 CEST
 </div>
 </div>
 </body>
