--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ I will also aid you in making better and more informed decisions.</p>
 </div>
 </div>
 <div class="paragraph">
-<p><span class="icon"><i class="fa fa-pencil"></i></span> <a href="http://blog.wagjo.com">Blog</a> &nbsp; <span class="icon"><i class="fa fa-github"></i></span> <a href="http://github.com/wagjo">Github</a> &nbsp; <span class="icon"><i class="fa fa-twitter"></i></span> <a href="https://twitter.com/wagjo">@wagjo</a> &nbsp; <span class="icon"><i class="fa fa-linkedin"></i></span> <a href="https://sk.linkedin.com/in/jozefwagner">jozefwagner</a> &nbsp; <span class="icon"><i class="fa fa-phone"></i></span> +421 949 213 889 &nbsp; <span class="icon"><i class="fa fa-envelope-o"></i></span> <a href="mailto:wagjo@wagjo.com">wagjo@wagjo.com</a></p>
+<p><span class="icon"><i class="fa fa-pencil"></i></span> <a href="http://blog.wagjo.com">Blog</a> &nbsp; <span class="icon"><i class="fa fa-github"></i></span> <a href="http://github.com/wagjo">Github</a> &nbsp; <span class="icon"><i class="fa fa-twitter"></i></span> <a href="https://twitter.com/wagjo">@wagjo</a> &nbsp; <span class="icon"><i class="fa fa-linkedin"></i></span> <a href="https://sk.linkedin.com/in/jozefwagner">jozefwagner</a> <!-- &nbsp; <span class="icon"><i class="fa fa-phone"></i></span> +421 949 213 889 -->&nbsp; <span class="icon"><i class="fa fa-envelope-o"></i></span> <a href="mailto:wagjo@wagjo.com">wagjo@wagjo.com</a></p>
 </div>
 </div>
 </div>
