--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ I will also aid you in making better and more informed decisions.</p>
 </div>
 </div>
 <div class="paragraph">
-<p><span class="icon"><i class="fa fa-pencil"></i></span> <a href="http://blog.wagjo.com">Blog</a> &nbsp; <span class="icon"><i class="fa fa-github"></i></span> <a href="http://github.com/wagjo">Github</a> &nbsp; <span class="icon"><i class="fa fa-twitter"></i></span> <a href="https://twitter.com/wagjo">@wagjo</a> &nbsp; <span class="icon"><i class="fa fa-linkedin"></i></span> <a href="https://sk.linkedin.com/in/jozefwagner">jozefwagner</a> <!-- &nbsp; <span class="icon"><i class="fa fa-phone"></i></span> +421 949 213 889 -->&nbsp; <span class="icon"><i class="fa fa-envelope-o"></i></span> <a href="mailto:wagjo@wagjo.com">wagjo@wagjo.com</a></p>
+<p><span class="icon"><i class="fa fa-pencil"></i></span> <a href="http://blog.wagjo.com">Blog</a> &nbsp; <span class="icon"><i class="fa fa-github"></i></span> <a href="http://github.com/wagjo">Github</a> &nbsp; <span class="icon"><i class="fa fa-twitter"></i></span> <a href="https://twitter.com/wagjo">@wagjo</a> &nbsp; <span class="icon"><i class="fa fa-linkedin"></i></span> <a href="https://sk.linkedin.com/in/jozefwagner">jozefwagner</a> &nbsp; <span class="icon"><i class="fa fa-envelope-o"></i></span> <a href="mailto:wagjo@wagjo.com">wagjo@wagjo.com</a></p>
 </div>
 </div>
 </div>
@@ -613,6 +613,9 @@ related blog:</p>
 <div class="ulist">
 <ul>
 <li>
+<p><a href="http://blog.wagjo.com/factory.html">Idiomatic Factory Pattern in Clojure</a></p>
+</li>
+<li>
 <p><a href="http://blog.wagjo.com/markov.html">Markov Text Generator in Dunaj</a></p>
 </li>
 <li>
@@ -674,7 +677,7 @@ related blog:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-05-11 13:54:05 CEST
+Last updated 2015-06-08 19:24:01 CEST
 </div>
 </div>
 </body>
