new open source library

--- a/index.html
+++ b/index.html
@@ -592,6 +592,13 @@ Clojure 1.7 contributors.</p>
 <ul>
 <li>
 <p><a href="http://www.dunaj.org">Dunaj</a>, an alternative core API for Clojure</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/dunaj-project/crispin">Crispin</a>, a library for managing project-wide configuration</p>
+</li>
+</ul>
+</div>
 </li>
 <li>
 <p>Comparison of <a href="https://github.com/wagjo/serialization-formats">Data serialization formats</a></p>
@@ -677,7 +684,7 @@ related blog:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-06-08 19:24:01 CEST
+Last updated 2015-06-11 09:12:20 CEST
 </div>
 </div>
 </body>
