--- a/index.html
+++ b/index.html
@@ -620,6 +620,9 @@ related blog:</p>
 <div class="ulist">
 <ul>
 <li>
+<p><a href="http://blog.wagjo.com/jwt.html">Handling JSON Web Tokens in Dunaj</a></p>
+</li>
+<li>
 <p><a href="http://blog.wagjo.com/factory.html">Idiomatic Factory Pattern in Clojure</a></p>
 </li>
 <li>
@@ -684,7 +687,7 @@ related blog:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-06-11 09:12:20 CEST
+Last updated 2015-06-21 14:56:16 CEST
 </div>
 </div>
 </body>
