--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@ and initiatives.</p>
 <div class="paragraph text-justify">
 <p>I specialize in addressing business needs with the application
 of techniques from the field of data mining, business intelligence and
-machine learning. I will help you to reduce risks and maintain trust
-in your products, processes, and business critical systems.
-I will also aid you in making better and more informed decisions.</p>
+machine learning. I help to reduce risks and maintain trust
+in my clients' products, processes, and business critical systems.
+I also aid them in making better and more informed decisions.</p>
 </div>
 <div class="paragraph dtext-center">
 <p><strong>Software Development&nbsp; &#x2022; &nbsp;Business Intelligence&nbsp; &#x2022; &nbsp;<a href="#_open_source_projects">Clojure Specialist</a></strong></p>
@@ -536,29 +536,28 @@ and knowledge analysis.</p>
 <h2 id="_consulting_services">Consulting Services</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>I will bring additional business value to your company by:</p>
+<p>I bring additional business value to my clients by:</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
 <p>Designing, development and deployment of software solutions that
-solve your business problems and brings additional revenue.</p>
+solve their business problems and brings additional revenue.</p>
 </li>
 <li>
-<p>Processing and analyzing your company&#8217;s available data and logs,
-in order to discover actionable knowledge that will enable you
+<p>Processing and analyzing company&#8217;s available data and logs,
+in order to discover actionable knowledge that will enable my clients
 to make highly informed decisions.</p>
 </li>
 <li>
-<p>Helping you to automate various line of business processes including
+<p>Helping to automate various line of business processes including
 data analysis one, in order to reduce costs and provide real time
 and up to date evaluations and insights.</p>
 </li>
 </ul>
 </div>
 <div class="paragraph">
-<p>I&#8217;m available for consulting and remote contract work.
-Feel free to contact me at <a href="mailto:wagjo@wagjo.com">wagjo@wagjo.com</a>.
+<p>Feel free to contact me at <a href="mailto:wagjo@wagjo.com">wagjo@wagjo.com</a>.
 Located in Central Europe, I provide my services primarily for the EU region, and remotely.
 See more <a href="consulting.html">technology heavy details</a> about my
 consulting services and technical proficiencies.</p>
@@ -585,7 +584,7 @@ needs.
 <h2 id="_open_source_projects">Open Source Projects</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>I&#8217;m <a href="https://youtu.be/NvF-GZI20L4?t=1715">one of the few</a>
+<p>I&#8217;m <a href="http://blog.cognitect.com/blog/2015/6/30/clojure-17">one of the few</a>
 Clojure 1.7 contributors.</p>
 </div>
 <div class="ulist">
@@ -687,7 +686,7 @@ related blog:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-06-21 14:56:16 CEST
+Last updated 2015-08-01 21:25:24 CEST
 </div>
 </div>
 </body>
