--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@ Clojure 1.7 contributors.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="http://www.dunaj.org">Dunaj</a>, an alternative core API for Clojure</p>
+<p>Dunaj, an alternative core API for Clojure (no longer maintained)</p>
 <div class="ulist">
 <ul>
 <li>
